# cv_api_cpp_sdk

./: .gitignore  CMakeLists.txt  CMakePresets.json  FunctionExampleOfUse.md  README.md
example/: main.cpp
include/: ApiResult.h  HttpUtils.h  ImageApiClient.h  Models.h  Operations.h
src/: HttpUtils.cpp  ImageApiClient.cpp  Operations.cpp
